add basic api token auth

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+API_KEY=InsertAnApiKey
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
